# obsidian-ocr

./: app.py  pyproject.toml
